add dependencies to make whole spring context work

--- a/hibernate/src/main/resources/application.yml
+++ b/hibernate/src/main/resources/application.yml
@@ -5,3 +5,6 @@ spring:
     password:
     platform: postgresql
     driverClassName: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto=create-drop:
