--- a/hibernate/build.gradle
+++ b/hibernate/build.gradle
@@ -12,8 +12,12 @@ repositories {
 
 dependencies {
 
-    implementation("org.hibernate:hibernate-core:6.1.1.Final")
+    implementation("org.hibernate:hibernate-core:5.6.9.Final")
+    implementation("org.hibernate:hibernate-entitymanager:5.6.10.Final")
+
     compileOnly("org.projectlombok:lombok:1.18.24")
+
+    implementation("org.postgresql:postgresql:42.4.0")
 
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${JUNIT}")
