--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -1,5 +1,8 @@
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /swagger-ui-custom.html
+#springdoc:
+#  api-docs:
+#    path: api-docs
+#  swagger-ui:
+#    path: swagger-ui-custom.html
+application:
+  description: description
+  version: 1
