--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -13,6 +13,10 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation("org.assertj:assertj-core:3.23.1")
+
+    testImplementation("org.springframework.boot:spring-boot-test-autoconfigure:2.7.1")
+
 
 //    potrzebne do swaggera
     implementation("org.springdoc:springdoc-openapi-webflux-ui:1.6.9")
@@ -20,6 +24,9 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-webflux:2.7.1")
 
     compileOnly("org.projectlombok:lombok:1.18.24")
+
+    testImplementation("org.springframework:spring-test:5.3.22")
+
 
 }
 
