--- a/hibernate/src/main/resources/application.yml
+++ b/hibernate/src/main/resources/application.yml
@@ -6,5 +6,6 @@ spring:
     platform: postgresql
     driverClassName: org.postgresql.Driver
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: create-drop
