extend sql logs

--- a/hibernate/src/main/resources/application.yml
+++ b/hibernate/src/main/resources/application.yml
@@ -9,3 +9,12 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create-drop
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
+        type:
+          descriptor:
+            sql:
+              BasicBinder: TRACE
