--- a/grapql-basic/build.gradle
+++ b/grapql-basic/build.gradle
@@ -18,14 +18,11 @@ dependencies {
     compileOnly("org.projectlombok:lombok:1.18.24")
 
     implementation("org.springframework.boot:spring-boot-starter-web:2.7.3")
-    implementation("com.graphql-java-kickstart:graphql-spring-boot-starter:14.0.0")
-    implementation("com.graphql-java-kickstart:graphql-java-tools:13.0.0")
-    implementation("com.graphql-java-kickstart:graphiql-spring-boot-starter:11.1.0")
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa:2.7.3")
-
+    implementation("com.graphql-java:graphql-spring-boot-starter:5.0.2")
+    implementation("com.graphql-java:graphql-java-tools:5.2.4")
+    implementation("com.graphql-java:graphiql-spring-boot-starter:5.0.2")
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:${SPRING_BOOT}")
-    testImplementation("com.h2database:h2:2.1.214")
 
 }
 
